update 29/10 Semi stable version with full (SELECT COUNT) functionality